# qaclan-cli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
cli/: db.py  script_processor.py
cli/commands/: project.py
cli/commands/web/: record.py  run.py  script.py
web/: server.py
web/routes/: envs.py  features.py  projects.py  runs.py  scripts.py
web/static/: app.js  index.html  style.css
